# python-project-50

./: .gitignore  Makefile  README.md  gendiff_demo.cast  pyproject.toml  test_module.py
.github/workflows/: code-climate.yml  tests-check.yml
gendiff/: __init__.py  argument_parser.py  difference_maker.py  file_parser.py  generate_difference.py
gendiff/formatters/: __init__.py  json.py  json_formatter.py  plain.py  plain_formatter.py  stylish.py  stylish_formatter.py
gendiff/scripts/: argument_parser.py  file_parser.py  gendiff.py  generate_diff.py  instruments.py  plain.py  stylish.py  to_json.py
gendiff/tools/: difference_maker.py  exceptions.py  file_parser.py  predicate_funcs.py  value_maker.py
project/scripts/: gendiff.py
tests/: test_json_merge.py  test_project.py
tests/fixtures/: misha_profile_20_years_old.yaml  misha_profile_30_years_old.json  misha_profile_30_years_old.yaml  misha_profile_40_years_old.yaml  one.json  result.txt  result_1.txt  result_json.txt  result_main.txt  result_nonstyle.txt  three.json  two.json
